1px smaller textarea for correct alignment

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -575,7 +575,7 @@ $input-select: 80px;
   }
 
   textarea {
-    height: 118px;
+    height: 117px;
   }
 
   .content {
